# internal/server/handler/test_scenario.go
@@ -480,7 +480,7 @@ func (handler *TestScenario) Resume() fiber.Handler {
 	}
 }
 
-// Resume godoc
+// Stop godoc
 //
 //	@Summary		Stop a test scenario.
 //	@Description	Stop a specific test scenario by its ID.
@@ -524,6 +524,54 @@ func (handler *TestScenario) Stop() fiber.Handler {
 
 		return ctx.Status(http.StatusOK).JSON(&response.SuccessResponse{
 			Message: pkg.TestScenarioStop,
+		})
+	}
+}
+
+// Abort godoc
+//
+//	@Summary		Abort a test scenario.
+//	@Description	Abort a specific test scenario by its ID.
+//	@Tags			test-scenarios
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		int	true	"Test scenario ID"
+//	@Success		200	{object}	response.SuccessResponse
+//	@Failure		400	{object}	response.ErrorResponse
+//	@Failure		404	{object}	response.ErrorResponse
+//	@Failure		500	{object}	response.ErrorResponse
+//	@Router			/api/v1/test-scenarios/{id}/abort [post]
+func (handler *TestScenario) Abort() fiber.Handler {
+	return func(ctx *fiber.Ctx) error {
+		tracer := otel.Tracer("test-scenario-handler")
+		traceCtx, span := tracer.Start(ctx.Context(), "abort_test_scenario")
+		defer span.End()
+
+		requestID := logger.GetRequestID(ctx.Context())
+		span.SetAttributes(attribute.String("request_id", requestID))
+
+		idParam := ctx.Params("id")
+		if idParam == "" {
+			span.SetAttributes(attribute.String("error.type", "missing_id"))
+			return pkg.ToHTTPError(pkg.ErrPageNotFound).AsFiber(ctx)
+		}
+
+		id, err := strconv.ParseUint(idParam, 10, 64)
+		if err != nil {
+			span.SetAttributes(attribute.String("error.type", "invalid_id_in_params"))
+			return pkg.ToHTTPError(pkg.ErrInvalidIDInParams).AsFiber(ctx)
+		}
+
+		span.SetAttributes(attribute.String("test_scenario.id", strconv.FormatUint(id, 10)))
+
+		err = handler.testScenario.Abort(traceCtx, id)
+		if err != nil {
+			span.SetAttributes(attribute.String("error.type", "abort_error"), attribute.String("error.message", err.Error()))
+			return pkg.ToHTTPError(err).AsFiber(ctx)
+		}
+
+		return ctx.Status(http.StatusOK).JSON(&response.SuccessResponse{
+			Message: pkg.TestScenarioAbort,
 		})
 	}
 }
